<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_1"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_usb" />
        <item
            android:id="@+id/item_2"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_update" />
        <item
            android:id="@+id/item_3"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/item_4"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_set" />
        <item
            android:id="@+id/item_5"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_feedback" />
        <item
            android:id="@+id/item_6"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_login" />
    </group>
</menu>