<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_account"
        android:title="@string/tab_1"
        android:icon="@drawable/tab_account_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_manage"
        android:title="@string/tab_2"
        android:icon="@drawable/tab_manage_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_homepage"
        android:title="@string/tab_3"
        android:icon="@drawable/tab_homepage_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_find"
        android:title="@string/tab_4"
        android:icon="@drawable/tab_find_selector"
        app:showAsAction="always" />

</menu>